# LintAR

./: LICENSE  Makefile  README.md  format.sh  lint.sh  pyproject.toml  test.sh
.cspell/: custom-dictionary-workspace.txt
lintar/: lintar.py  log_config.py
lintar/arxml/: abs_parser.py  application_sw_component_type.py  application_sw_component_type_test.py  arxml_errors.py  arxml_errors_test.py  base_parser.py  parser.py  ports.py  ports_test.py  ref.py  ref_test.py
lintar/validators/: schema_based_validator.py
test/: EcuExtract.arxml
