[tool.poetry]
name = "lintar"
version = "0.1.0"
description = "The ARXML linter"
authors = ["Michal Sopniewski <codeist@codeist.pl>"]
license = "LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
colorlog = "^6.8.0"
lxml = "^5.1.0"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
flake8 = "^7.0.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
